# telegram_taxi-bot

./: .gitignore  README.md  config.py  main.py  pyproject.toml  taxi.sql
functions/: __init__.py  database.py  driver_functions.py  orders_functions.py  user_functions.py
handlers/: __init__.py  driver.py  group.py  user.py
keyboards/: driver_kb.py  user_kb.py
migrations/: env.py
migrations/versions/: 5946c8f43a03_add_cartype.py  8229b26f8703_update_cartype.py  c05a23491d31_create_tables.py
src/: database.py  main.py  utils.py
src/db/: models.py
src/db/queries/: __init__.py  driver_queries.py  order_queries.py  user_queries.py
src/handlers/: driver.py  group.py  user.py
src/keyboards/: __init__.py  driver_kb.py  user_kb.py
src/settings/: admin.py  bot_config.py  db_config.py
