[tool.poetry]
name = "taxi-bot"
version = "0.1.0"
description = ""
authors = ["frankdelan <frank.danil704@gmail.com>"]
readme = "README.md"
packages = [{include = "taxi_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.23.1"
pymysql = "^1.0.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
